2004/05/29 18:39 (+0200) kaffeetisch

	* Gnome2.pm
	* NEWS: Unstable version 1.010.

2004/05/28 23:58 (+0200) kaffeetisch

	* Gnome2.pm: Actually use() Gnome2::Canvas so users of Gnome2 are
	not required to do so themselves.

2004/05/28 13:12 (+0200) kaffeetisch

	* t/GnomeIconTheme.t: Use the gnome-fs-directory icon.

2004/05/22 17:50 (+0200) kaffeetisch

	* t/GnomeIconTheme.t: Check if the icon data is a hash reference.

2004/05/21 16:08 (+0200) kaffeetisch

	* xs/GnomeAppHelper.xs: Make gnome2perl_popup_menu_activate_func,
	gnome2perl_popup_menu_activate_func_destroy,
	gnome2perl_refill_info_common, gnome2perl_refill_info,
	gnome2perl_refill_info_popup, and ui_builder_data static.

	* xs/GnomeConfig.xs: Make SvGnomeConfigIterator and
	newSVGnomeConfigIterator static.

	* xs/GnomeIconList.xs: Make newSVGnome2PerlIconListFlags static
	and comment it out, it's unused.

	* xs/GnomeIconTheme.xs: Rename data_to_hv to newSVGnomeIconData,
	make it static and let it handle the RV creation.  Make
	SvGnomeIconData static and comment it out -- it's not used
	currently.

	* xs/GnomeProgram.xs: Make handle_module_info static.

	* xs/GnomeWindowIcon.xs: Make newSVGnomeCharArray static.

	Merge from the stable-1-00 branch:

	* xs/GnomeIconTheme.xs (data_to_hv): Check if display_name is NULL
	before using it.

	* xs/GnomeIconLookup.xs
	* xs/GnomeIconTheme.xs
	* xs/GnomePasswordDialog.xs
	* xs/GnomeThumbnail.xs: Mark 'file' unused in case there are no
	xsubs at all.

2004/05/16 17:46 (+0200) kaffeetisch

	* t/GnomeThumbnail.t: Correct skip count.

2004/04/27 20:45 (+0200) kaffeetisch

	Merge from the stable-1-00 branch:

	* Makefile.PL: Add Gnome2::Canvas to PREREQ_PM as well so that it
	(hopefully) gets picked up by CPAN(PLUS).pm.

2004/04/25 13:38 (+0200) kaffeetisch

	* t/GnomeDruid.t: Add reference to the relevant bug to the
	set_contents_background comment.

	* t/GnomeThumbnail.t: Test has_uri and is_valid but skip them for
	now since they're broken.
