@@ -162,6 +162,15 @@ gnome_icon_list_unselect_icon (gil, pos)
 	GnomeIconList *gil
 	int pos
 
+#if LIBGNOMEUI_CHECK_VERSION (2, 7, 1) /* FIXME: 2.8 */
+
+##  void gnome_icon_list_select_all (GnomeIconList *gil) 
+void
+gnome_icon_list_select_all (gil)
+	GnomeIconList *gil
+
+#endif
+
 ##  int gnome_icon_list_unselect_all (GnomeIconList *gil) 
 int
 gnome_icon_list_unselect_all (gil)
